--- a/python-project-2/3-data-cleaning.ipynb
+++ b/python-project-2/3-data-cleaning.ipynb
@@ -3079,10 +3079,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "28c17f8e-6da3-4f1b-b1ef-f00d0bad8168",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [sku, name, desc, price, promo_price, in_stock, type]\n",
+      "Index: []\n",
+      "----------------------------------------------------\n",
+      "\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -3120,7 +3132,7 @@
        "      <td>Silver Rain Design mStand Support</td>\n",
        "      <td>Aluminum support compatible with all MacBook</td>\n",
        "      <td>59.99</td>\n",
-       "      <td>50.0</td>\n",
+       "      <td>49.99</td>\n",
        "      <td>1</td>\n",
        "      <td>8696</td>\n",
        "    </tr>\n",
@@ -3130,7 +3142,7 @@
        "      <td>Apple Mac Keyboard Keypad Spanish</td>\n",
        "      <td>USB ultrathin keyboard Apple Mac Spanish.</td>\n",
        "      <td>59.00</td>\n",
-       "      <td>59.0</td>\n",
+       "      <td>59.00</td>\n",
        "      <td>0</td>\n",
        "      <td>13855401</td>\n",
        "    </tr>\n",
@@ -3140,7 +3152,7 @@
        "      <td>Mighty Mouse Apple Mouse for Mac</td>\n",
        "      <td>mouse Apple USB cable.</td>\n",
        "      <td>59.00</td>\n",
-       "      <td>57.0</td>\n",
+       "      <td>56.99</td>\n",
        "      <td>0</td>\n",
        "      <td>1387</td>\n",
        "    </tr>\n",
@@ -3150,7 +3162,7 @@
        "      <td>Apple Dock to USB Cable iPhone and iPod white</td>\n",
        "      <td>IPhone dock and USB Cable Apple iPod.</td>\n",
        "      <td>25.00</td>\n",
-       "      <td>23.0</td>\n",
+       "      <td>23.00</td>\n",
        "      <td>0</td>\n",
        "      <td>1230</td>\n",
        "    </tr>\n",
@@ -3160,7 +3172,7 @@
        "      <td>Mac Memory Kingston 2GB 667MHz DDR2 SO-DIMM</td>\n",
        "      <td>2GB RAM Mac mini and iMac (2006/07) MacBook Pr...</td>\n",
        "      <td>34.99</td>\n",
-       "      <td>32.0</td>\n",
+       "      <td>31.99</td>\n",
        "      <td>1</td>\n",
        "      <td>1364</td>\n",
        "    </tr>\n",
@@ -3177,11 +3189,11 @@
        "4  KIN0007    Mac Memory Kingston 2GB 667MHz DDR2 SO-DIMM   \n",
        "\n",
        "                                                desc  price  promo_price  \\\n",
-       "0       Aluminum support compatible with all MacBook  59.99         50.0   \n",
-       "1          USB ultrathin keyboard Apple Mac Spanish.  59.00         59.0   \n",
-       "2                             mouse Apple USB cable.  59.00         57.0   \n",
-       "3              IPhone dock and USB Cable Apple iPod.  25.00         23.0   \n",
-       "4  2GB RAM Mac mini and iMac (2006/07) MacBook Pr...  34.99         32.0   \n",
+       "0       Aluminum support compatible with all MacBook  59.99        49.99   \n",
+       "1          USB ultrathin keyboard Apple Mac Spanish.  59.00        59.00   \n",
+       "2                             mouse Apple USB cable.  59.00        56.99   \n",
+       "3              IPhone dock and USB Cable Apple iPod.  25.00        23.00   \n",
+       "4  2GB RAM Mac mini and iMac (2006/07) MacBook Pr...  34.99        31.99   \n",
        "\n",
        "   in_stock      type  \n",
        "0         1      8696  \n",
@@ -3191,7 +3203,7 @@
        "4         1      1364  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3208,6 +3220,7 @@
     "        df.assign(price = df.price.str.split('.')\n",
     "                  .apply(lambda x : x[0]+x[1]+'.'+x[2] if len(x)==3 else (x[0]+'.'+ x[1] if len(x)==2 else x[0]))\n",
     "                  .astype(float)\n",
+    "                  .round(2)\n",
     "        )\n",
     "    )\n",
     "\n",
@@ -3219,45 +3232,47 @@
     "                     .apply(lambda x: x+'.00')\n",
     "                    )\n",
     "\n",
-    "def _insert_decimal_at_position(s, pos):\n",
+    "def _insert_decimal_at_string_position(s, pos):\n",
     "    s = s.split('.')\n",
     "    s = s[0] + s[1]\n",
     "    s = s[:pos]+'.'+s[pos:]\n",
     "    return s \n",
     "\n",
     "\n",
-    "def insert_decimal(row):\n",
+    "def _insert_decimal_in_promo_price(row):\n",
     "    decimal_position = -2\n",
     "    while float(row.promo_price) > row.price:\n",
     "        if round(float(row.promo_price), 0) == round(row.price, 0):\n",
     "            row.promo_price = row.price\n",
     "            return row.promo_price\n",
     "        else:\n",
-    "            row.promo_price = _insert_decimal_at_position(row.promo_price, decimal_position)\n",
+    "            row.promo_price = _insert_decimal_at_string_position(row.promo_price, decimal_position)\n",
     "            decimal_position += -1\n",
     "    \n",
-    "    return round(float(row.promo_price))\n",
+    "    return round(float(row.promo_price), 2)\n",
     "\n",
-    "        \n",
-    "def insert_decimal_in_promo_price(df):\n",
-    "    return df.assign(promo_price = df.apply(lambda row: _decimal_position(row.promo_price, \n",
-    "                                                                          row.digits_before_decimal), \n",
-    "                                            axis=1))\n",
+    "def transform_promo_price_to_floats(df):\n",
+    "    df.promo_price = [_insert_decimal_in_promo_price(row) for index, row in df.iterrows()]\n",
+    "    return df\n",
     "\n",
     "temp = (products\n",
     "        .pipe(start_pipeline)\n",
     "        .pipe(remove_duplicates,col='price')\n",
     "        .pipe(transform_price_to_floats)\n",
     "        .pipe(split_and_join_promo_prices)\n",
+    "        .pipe(transform_promo_price_to_floats)\n",
     ")\n",
     "\n",
-    "temp['promo_price'] = [insert_decimal(row) for index, row in temp.iterrows()]\n",
+    "print(temp[temp.promo_price > temp.price])\n",
+    "print('----------------------------------------------------')\n",
+    "print('\\n')\n",
+    "\n",
     "temp.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "0212e894-f82e-4387-9dbf-7936082c919b",
    "metadata": {},
    "outputs": [
@@ -3265,61 +3280,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           sku                                              name  \\\n",
-      "17     HGD0007      Henge Docks Docking Station MacBook Pro 13 \"   \n",
-      "23     MOB0007           Mobee Magic Charger Charger Magic Mouse   \n",
-      "48     IST0009                   iStabilizer iPhone Tripod Mount   \n",
-      "54     BLL0011     BlueLounge Milo iPhone and iPod black support   \n",
-      "60     WAC0032  Wacom Bamboo Stylus Pack 3 first generation tips   \n",
-      "...        ...                                               ...   \n",
-      "19306  REP0429                iPhone Speaker lower repair 7 plus   \n",
-      "19307  REP0418                  iPhone charging connector repair   \n",
-      "19317  REP0403                            iPad LCD screen repair   \n",
-      "19318  REP0402                          iPad touch screen repair   \n",
-      "19320  REP0076          repair Full screen iPad (1st generation)   \n",
-      "\n",
-      "                                                    desc    price  \\\n",
-      "17     Dock and support with multiple connections for...   69.990   \n",
-      "23                      Wireless Charger for Magic Mouse   49.990   \n",
-      "48            IPhone Tripod Adapter for photo and video.   19.990   \n",
-      "54                      Desktop support iPhone and iPod.   14.990   \n",
-      "60     3 Pack Bamboo Stylus pen tips iPad iPhone and ...    4.990   \n",
-      "...                                                  ...      ...   \n",
-      "19306  Repair service including parts and labor for i...  599.906   \n",
-      "19307  Repair service including parts and labor for i...   49.990   \n",
-      "19317  Repair service including parts and labor for iPad  159.990   \n",
-      "19318  Repair service including parts and labor for iPad  139.990   \n",
-      "19320  Repair service including parts and labor for iPad  149.990   \n",
-      "\n",
-      "       promo_price  in_stock      type  \n",
-      "17            70.0         0  12995397  \n",
-      "23            50.0         0  12355400  \n",
-      "48            20.0         0      1216  \n",
-      "54            15.0         0      1216  \n",
-      "60             5.0         0      1229  \n",
-      "...            ...       ...       ...  \n",
-      "19306        600.0         0  1,44E+11  \n",
-      "19307         50.0         0  1,44E+11  \n",
-      "19317        160.0         0  1,44E+11  \n",
-      "19318        140.0         0  1,44E+11  \n",
-      "19320        150.0         0  1,44E+11  \n",
-      "\n",
-      "[569 rows x 7 columns]\n",
-      "----------------------------------------------------\n",
-      "\n",
-      "\n",
       "       price  promo_price\n",
-      "0      59.99         50.0\n",
-      "28     59.99         50.0\n",
-      "92     59.99         40.0\n",
-      "423    59.99         36.0\n",
-      "430    59.99         55.0\n",
+      "0      59.99        49.99\n",
+      "28     59.99        50.21\n",
+      "92     59.99        39.99\n",
+      "423    59.99        35.99\n",
+      "430    59.99        54.90\n",
       "...      ...          ...\n",
-      "18859  59.99         43.0\n",
-      "18934  59.99         27.0\n",
-      "18997  59.99         46.0\n",
-      "19076  59.99         57.0\n",
-      "19157  59.99         37.0\n",
+      "18859  59.99        42.99\n",
+      "18934  59.99        26.53\n",
+      "18997  59.99        46.07\n",
+      "19076  59.99        56.99\n",
+      "19157  59.99        37.48\n",
       "\n",
       "[135 rows x 2 columns]\n",
       "\n",
@@ -3337,129 +3309,129 @@
       "\n",
       "\n",
       "       price  promo_price\n",
-      "208   2399.0       2399.0\n",
-      "209   2399.0       2399.0\n",
-      "210   2399.0       2399.0\n",
-      "211   2399.0       2399.0\n",
-      "212   2399.0       2399.0\n",
-      "213   2399.0       2399.0\n",
-      "214   2399.0       2399.0\n",
-      "215   2399.0       2399.0\n",
-      "216   2399.0       2399.0\n",
-      "217   2399.0       2399.0\n",
-      "218   2399.0       2399.0\n",
-      "219   2399.0       2399.0\n",
-      "220   2399.0       2399.0\n",
-      "221   2399.0       2399.0\n",
-      "222   2399.0       2399.0\n",
-      "223   2399.0       2399.0\n",
-      "224   2399.0       2399.0\n",
-      "225   2399.0       2399.0\n",
-      "253   2399.0       2399.0\n",
-      "254   2399.0       2399.0\n",
-      "255   2399.0       2399.0\n",
-      "256   2399.0       2399.0\n",
-      "257   2399.0       2399.0\n",
-      "258   2399.0       2399.0\n",
-      "259   2399.0       2399.0\n",
-      "260   2399.0       2399.0\n",
-      "261   2399.0       2399.0\n",
-      "2642  2399.0       2140.0\n",
+      "208   2399.0      2398.99\n",
+      "209   2399.0      2398.99\n",
+      "210   2399.0      2398.99\n",
+      "211   2399.0      2398.99\n",
+      "212   2399.0      2398.99\n",
+      "213   2399.0      2398.99\n",
+      "214   2399.0      2398.99\n",
+      "215   2399.0      2398.99\n",
+      "216   2399.0      2398.99\n",
+      "217   2399.0      2398.99\n",
+      "218   2399.0      2398.99\n",
+      "219   2399.0      2398.99\n",
+      "220   2399.0      2398.99\n",
+      "221   2399.0      2398.99\n",
+      "222   2399.0      2398.99\n",
+      "223   2399.0      2398.99\n",
+      "224   2399.0      2398.99\n",
+      "225   2399.0      2398.99\n",
+      "253   2399.0      2398.99\n",
+      "254   2399.0      2398.99\n",
+      "255   2399.0      2398.99\n",
+      "256   2399.0      2398.99\n",
+      "257   2399.0      2398.99\n",
+      "258   2399.0      2398.99\n",
+      "259   2399.0      2398.99\n",
+      "260   2399.0      2398.99\n",
+      "261   2399.0      2398.99\n",
+      "2642  2399.0      2139.99\n",
       "\n",
       "\n",
       "      price  promo_price\n",
-      "262  1319.0       1280.0\n",
-      "263  1319.0       1280.0\n",
-      "264  1319.0       1280.0\n",
-      "265  1319.0       1280.0\n",
-      "266  1319.0       1280.0\n",
-      "267  1319.0       1280.0\n",
-      "268  1319.0       1280.0\n",
-      "269  1319.0       1280.0\n",
-      "270  1319.0       1280.0\n",
+      "262  1319.0      1279.99\n",
+      "263  1319.0      1279.99\n",
+      "264  1319.0      1279.99\n",
+      "265  1319.0      1279.99\n",
+      "266  1319.0      1279.99\n",
+      "267  1319.0      1279.99\n",
+      "268  1319.0      1279.99\n",
+      "269  1319.0      1279.99\n",
+      "270  1319.0      1279.99\n",
       "\n",
       "\n",
       "       price  promo_price\n",
       "46     79.99        75.00\n",
-      "49     79.99        75.00\n",
-      "64     79.99        78.00\n",
+      "49     79.99        74.99\n",
+      "64     79.99        77.79\n",
       "68     79.99        79.99\n",
       "69     79.99        79.99\n",
       "...      ...          ...\n",
-      "18982  79.99        80.00\n",
-      "19136  79.99        75.00\n",
-      "19146  79.99        75.00\n",
-      "19229  79.99        49.00\n",
-      "19291  79.99        80.00\n",
+      "18982  79.99        79.99\n",
+      "19136  79.99        74.99\n",
+      "19146  79.99        74.99\n",
+      "19229  79.99        48.82\n",
+      "19291  79.99        79.99\n",
       "\n",
       "[143 rows x 2 columns]\n",
       "\n",
       "\n",
       "        price  promo_price\n",
-      "90     107.99         56.0\n",
-      "1079   107.99         75.0\n",
-      "1813   107.99         87.0\n",
-      "11665  107.99         86.0\n",
-      "13105  107.99         85.0\n",
-      "14763  107.99         60.0\n",
+      "90     107.99        55.99\n",
+      "1079   107.99        74.99\n",
+      "1813   107.99        86.99\n",
+      "11665  107.99        85.58\n",
+      "13105  107.99        85.19\n",
+      "14763  107.99        59.99\n",
       "\n",
       "\n",
       "       price  promo_price\n",
       "15     24.95        24.95\n",
-      "435    24.95        20.00\n",
-      "461    24.95        15.00\n",
-      "462    24.95        15.00\n",
-      "1328   24.95        21.00\n",
-      "1329   24.95        17.00\n",
-      "1607   24.95        21.00\n",
+      "435    24.95        19.99\n",
+      "461    24.95        14.99\n",
+      "462    24.95        14.99\n",
+      "1328   24.95        20.99\n",
+      "1329   24.95        16.99\n",
+      "1607   24.95        20.99\n",
       "2982   24.95        24.95\n",
-      "3028   24.95        24.00\n",
-      "3029   24.95        23.00\n",
+      "3028   24.95        23.99\n",
+      "3029   24.95        22.99\n",
       "11281  24.95        24.95\n",
-      "11286  24.95        23.00\n",
-      "11526  24.95        17.00\n",
-      "11687  24.95        20.00\n",
-      "11874  24.95        20.00\n",
-      "11878  24.95        20.00\n",
-      "12494  24.95        20.00\n",
-      "12497  24.95        18.00\n",
-      "12541  24.95        23.00\n",
-      "12578  24.95        24.00\n",
-      "12579  24.95        15.00\n",
-      "12580  24.95        19.00\n",
-      "12582  24.95        12.00\n",
-      "12593  24.95        24.00\n",
-      "13256  24.95        20.00\n",
-      "13275  24.95        17.00\n",
-      "13278  24.95        22.00\n",
-      "13279  24.95        22.00\n",
-      "13287  24.95        22.00\n",
-      "13693  24.95        21.00\n",
-      "15213  24.95        16.00\n",
-      "15215  24.95        16.00\n",
-      "15274  24.95        22.00\n",
-      "15306  24.95        14.00\n",
-      "15878  24.95        19.00\n",
-      "15879  24.95        19.00\n",
-      "16123  24.95        11.00\n",
-      "17074  24.95        20.00\n",
-      "17077  24.95        20.00\n",
-      "17496  24.95        19.00\n",
-      "17497  24.95        19.00\n",
-      "17498  24.95        23.00\n",
+      "11286  24.95        22.99\n",
+      "11526  24.95        16.99\n",
+      "11687  24.95        19.99\n",
+      "11874  24.95        19.99\n",
+      "11878  24.95        19.99\n",
+      "12494  24.95        19.99\n",
+      "12497  24.95        17.99\n",
+      "12541  24.95        22.99\n",
+      "12578  24.95        23.74\n",
+      "12579  24.95        14.99\n",
+      "12580  24.95        18.99\n",
+      "12582  24.95        11.99\n",
+      "12593  24.95        23.74\n",
+      "13256  24.95        19.99\n",
+      "13275  24.95        16.99\n",
+      "13278  24.95        21.99\n",
+      "13279  24.95        21.99\n",
+      "13287  24.95        21.99\n",
+      "13693  24.95        20.99\n",
+      "15213  24.95        15.99\n",
+      "15215  24.95        15.99\n",
+      "15274  24.95        21.99\n",
+      "15306  24.95        13.87\n",
+      "15878  24.95        18.99\n",
+      "15879  24.95        18.99\n",
+      "16123  24.95        10.58\n",
+      "17074  24.95        19.99\n",
+      "17077  24.95        19.99\n",
+      "17496  24.95        18.99\n",
+      "17497  24.95        18.99\n",
+      "17498  24.95        22.99\n",
       "17499  24.95        24.95\n",
-      "17501  24.95        23.00\n",
-      "17502  24.95        23.00\n",
-      "17504  24.95        23.00\n",
-      "17505  24.95        20.00\n",
-      "17513  24.95        18.00\n",
-      "17514  24.95        20.00\n",
-      "17517  24.95        18.00\n",
-      "17646  24.95        14.00\n",
-      "18763  24.95        15.00\n",
-      "18796  24.95        15.00\n",
-      "18827  24.95        15.00\n",
-      "19253  24.95        14.00\n"
+      "17501  24.95        22.99\n",
+      "17502  24.95        22.99\n",
+      "17504  24.95        22.99\n",
+      "17505  24.95        19.99\n",
+      "17513  24.95        17.99\n",
+      "17514  24.95        19.99\n",
+      "17517  24.95        17.99\n",
+      "17646  24.95        14.39\n",
+      "18763  24.95        15.12\n",
+      "18796  24.95        15.27\n",
+      "18827  24.95        15.12\n",
+      "19253  24.95        13.77\n"
      ]
     },
     {
@@ -3503,21 +3475,19 @@
        "Index: []"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(temp[temp.promo_price > temp.price])\n",
-    "print('----------------------------------------------------')\n",
-    "print('\\n')\n",
     "\n",
-    "print(temp[temp.price == 59.99][['price', 'promo_price']])     # 59.99 - 49_9.899\n",
+    "\n",
+    "print(temp[temp.price == 59.99][['price', 'promo_price']])     # 59.99 - 499.899\n",
     "print('\\n')\n",
     "print(temp[temp.price == 2159.00][['price', 'promo_price']])    # 2159 - 1769\n",
     "print('\\n')\n",
-    "print(temp[temp.price == 2399.00][['price', 'promo_price']])    # 2399 - 23.98_9.896\n",
+    "print(temp[temp.price == 2399.00][['price', 'promo_price']])    # 2399 - 23.989.896\n",
     "print('\\n')\n",
     "print(temp[temp.price == 1319.00][['price', 'promo_price']])    # 1319 - 1279.99\n",
     "print('\\n')\n",
