--- a/python-project-2/3-data-cleaning.ipynb
+++ b/python-project-2/3-data-cleaning.ipynb
@@ -3210,9 +3210,11 @@
    ],
    "source": [
     "def start_pipeline(df):\n",
+    "    '''Make a copy of the pipeline to prevent corrupting the original data'''\n",
     "    return df.copy()\n",
     "\n",
     "def remove_duplicates(df, col):\n",
+    "    '''Remove duplicate rows'''\n",
     "    return df[~df[col].isna()]\n",
     "\n",
     "def transform_price_to_floats(df):\n",
@@ -3224,8 +3226,8 @@
     "        )\n",
     "    )\n",
     "\n",
-    "\n",
     "def split_and_join_promo_prices(df):\n",
+    "    '''Remove the decimal points from the promo_price strings and append .00 to the string'''\n",
     "    return df.assign(promo_price=df.promo_price\n",
     "                     .str.split('.')\n",
     "                     .str.join('')\n",
@@ -3233,6 +3235,7 @@
     "                    )\n",
     "\n",
     "def _insert_decimal_at_string_position(s, pos):\n",
+    "    '''Insert a decimal point at a given position in a string'''\n",
     "    s = s.split('.')\n",
     "    s = s[0] + s[1]\n",
     "    s = s[:pos]+'.'+s[pos:]\n",
@@ -3240,6 +3243,14 @@
     "\n",
     "\n",
     "def _insert_decimal_in_promo_price(row):\n",
+    "    '''\n",
+    "    If the euro value of the price is equal to the euro value of the promo_price, \n",
+    "    set the promo_price equal to price and return it.\n",
+    "    This is because some promo_prices are slightly larger than their equivalent prices, e.g. 12.95 - 12.99\n",
+    "    \n",
+    "    Otherwise, keep moving the decimal point towards the start of the string until the promo_price is lower than the price.\n",
+    "    Then transform the string to a float and round it to two decimal places.\n",
+    "    '''\n",
     "    decimal_position = -2\n",
     "    while float(row.promo_price) > row.price:\n",
     "        if round(float(row.promo_price), 0) == round(row.price, 0):\n",
@@ -3481,7 +3492,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# Check values\n",
     "\n",
     "print(temp[temp.price == 59.99][['price', 'promo_price']])     # 59.99 - 499.899\n",
     "print('\\n')\n",
