Final solution with Hana's price function

--- a/python-project-2/3-data-cleaning.ipynb
+++ b/python-project-2/3-data-cleaning.ipynb
@@ -3079,7 +3079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "28c17f8e-6da3-4f1b-b1ef-f00d0bad8168",
    "metadata": {},
    "outputs": [
@@ -3203,7 +3203,7 @@
        "4         1      1364  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3225,6 +3225,31 @@
     "                  .round(2)\n",
     "        )\n",
     "    )\n",
+    "\n",
+    "def transform_price_to_floats(df):\n",
+    "    return (\n",
+    "        df.assign(price = df.price.apply(lambda x: \n",
+    "                                         x+'00' if x.count('.')==0 else (\n",
+    "                                             x+'0' if x[-2]=='.' else (\n",
+    "                                                 str(float(x.replace('.',''))/10000) if ((x[-4]=='.') & (x.count('.')==1)) else (\n",
+    "                                                     str(float(x.replace('.',''))/1000))\n",
+    "                                             )\n",
+    "                                         )\n",
+    "                                        )\n",
+    "                  .astype(float)\n",
+    "                  .round(2)\n",
+    "                 )\n",
+    "    )\n",
+    "\n",
+    "    \n",
+    "def clean_prices(df):\n",
+    "        df.price = df.price.apply(lambda x : x +'.00' if x.count('.') == 0 else x)\n",
+    "        df.price = df.price.apply(lambda x: x  + '0' if x[-2]=='.' else x)\n",
+    "        df.price = df.price.apply(lambda x: str(float(x.replace('.',''))/1000) if ( (x[-4]=='.') & (x.count('.')==2)) else x)\n",
+    "        df.price = df.price.apply(lambda x: str(float(x.replace('.',''))/10000) if ( (x[-4]=='.') & (x.count('.')==1)) else x)\n",
+    "        df.price = df.price.astype(float)\n",
+    "        df.price = df.price.round(decimals = 2)\n",
+    "        return df\n",
     "\n",
     "def split_and_join_promo_prices(df):\n",
     "    '''Remove the decimal points from the promo_price strings and append .00 to the string'''\n",
@@ -3269,7 +3294,7 @@
     "temp = (products\n",
     "        .pipe(start_pipeline)\n",
     "        .pipe(remove_duplicates,col='price')\n",
-    "        .pipe(transform_price_to_floats)\n",
+    "        .pipe(clean_prices)\n",
     "        .pipe(split_and_join_promo_prices)\n",
     "        .pipe(transform_promo_price_to_floats)\n",
     ")\n",
@@ -3283,7 +3308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "0212e894-f82e-4387-9dbf-7936082c919b",
    "metadata": {},
    "outputs": [
@@ -3298,13 +3323,13 @@
       "423    59.99        35.99\n",
       "430    59.99        54.90\n",
       "...      ...          ...\n",
-      "18859  59.99        42.99\n",
-      "18934  59.99        26.53\n",
-      "18997  59.99        46.07\n",
       "19076  59.99        56.99\n",
       "19157  59.99        37.48\n",
+      "19162  59.99        50.11\n",
+      "19298  59.99        59.99\n",
+      "19306  59.99        59.99\n",
       "\n",
-      "[135 rows x 2 columns]\n",
+      "[162 rows x 2 columns]\n",
       "\n",
       "\n",
       "      price  promo_price\n",
@@ -3369,13 +3394,13 @@
       "68     79.99        79.99\n",
       "69     79.99        79.99\n",
       "...      ...          ...\n",
-      "18982  79.99        79.99\n",
+      "19093  79.99        79.99\n",
       "19136  79.99        74.99\n",
       "19146  79.99        74.99\n",
       "19229  79.99        48.82\n",
       "19291  79.99        79.99\n",
       "\n",
-      "[143 rows x 2 columns]\n",
+      "[149 rows x 2 columns]\n",
       "\n",
       "\n",
       "        price  promo_price\n",
@@ -3442,7 +3467,14 @@
       "18763  24.95        15.12\n",
       "18796  24.95        15.27\n",
       "18827  24.95        15.12\n",
-      "19253  24.95        13.77\n"
+      "19253  24.95        13.77\n",
+      "\n",
+      "\n",
+      "         sku                       name                           desc  price  \\\n",
+      "617  SYN0058  Synology DDR RAM DDR3 2GB  2GB DDR3 memory for Synology.  39.99   \n",
+      "\n",
+      "     promo_price  in_stock  type  \n",
+      "617        39.99         0  1404  \n"
      ]
     },
     {
@@ -3486,7 +3518,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3509,7 +3541,8 @@
     "print('\\n')\n",
     "print(temp[temp.price == 24.950][['price', 'promo_price']])    # 24.95 - 24.99\n",
     "\n",
-    "\n",
+    "print('\\n')\n",
+    "print(temp[temp.sku=='SYN0058'])\n",
     "\n",
     "temp[temp.promo_price==None]"
    ]
@@ -3601,8 +3634,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "dfdca078-7afd-4b14-b558-7a682b8942ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         sku                                               name  \\\n",
+      "5    APP0073     Apple Composite AV Cable iPhone and iPod white   \n",
+      "6    KIN0008        Mac Memory Kingston 1GB 667MHz DDR2 SO-DIMM   \n",
+      "7    KIN0009        Mac Memory Kingston 2GB 800MHz DDR2 SO-DIMM   \n",
+      "8  KIN0001-2  Mac memory Kingston 4GB (2x2GB) 667MHz DDR2 SO...   \n",
+      "9    APP0100             Apple Adapter Mini Display Port to VGA   \n",
+      "\n",
+      "                                                desc  price  promo_price  \\\n",
+      "5  IPhone and iPod AV Cable Dock to Composite Video.  45.00        42.00   \n",
+      "6  1GB RAM Mac mini and iMac (2006/07) MacBook Pr...  18.99        14.65   \n",
+      "7       2GB RAM iMac with Intel Core 2 Duo (Penryn).  36.99        27.47   \n",
+      "8  RAM 4GB (2x2GB) Mac mini and iMac (2006/07) Ma...  74.00        66.99   \n",
+      "9  Adapter Mini Display Port to VGA MacBook and M...  35.00        33.00   \n",
+      "\n",
+      "   in_stock  type  \n",
+      "5         0  1230  \n",
+      "6         0  1364  \n",
+      "7         0  1364  \n",
+      "8         0  1364  \n",
+      "9         0  1325  \n"
+     ]
+    }
+   ],
+   "source": [
+    "t = temp.head(5)\n",
+    "t2 = temp.head(10)\n",
+    "\n",
+    "t3 = t2[~t2.index.isin(t.index)]\n",
+    "\n",
+    "print(t3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b2c46bc-fd46-4aa7-9be6-acdeec1631e4",
    "metadata": {},
    "outputs": [],
    "source": []
