Finished tasks for today

--- a/wk-5_AB_testing_project/1_sample_t-test_-_code_along-structure.ipynb
+++ b/wk-5_AB_testing_project/1_sample_t-test_-_code_along-structure.ipynb
@@ -265,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our z score is `0.86`. To find the p value for that score, we can use the cumulative distribution function fot the normal distribution. We'll have to double that value, since we want to look at both extremes of the distribution."
+    "Our z score is `0.86`. To find the p value for that score, we can use the cumulative distribution function for the normal distribution. We'll have to double that value, since we want to look at both extremes of the distribution."
    ]
   },
   {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -399,21 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.random.seed(42)\n",
-    "np.arange(40, 210)\n",
-    "pop = pd.Series(np.random.choice(np.arange(40, 210), size=10000))\n",
-    "samp_size = 45\n",
-    "wbs_students = pop.sample(samp_size, replace=True)\n",
-    "wbs_students = wbs_students+12"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -422,12 +408,19 @@
        "130.0222222222222"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Generate the wbs student data\n",
+    "np.random.seed(42)\n",
+    "np.arange(40, 210)\n",
+    "pop = pd.Series(np.random.choice(np.arange(40, 210), size=10000))\n",
+    "samp_size = 45\n",
+    "wbs_students = pop.sample(samp_size, replace=True)\n",
+    "wbs_students = wbs_students+12\n",
     "np.mean(wbs_students)"
    ]
   },
@@ -450,12 +443,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.338735146790408e-05"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tscore, pvalue = ttest_1samp(a=wbs_students, popmean=100)\n",
+    "pvalue"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
