Completed imdb exercises

--- a/wk-11_recommender_systems/Untitled.ipynb
+++ b/wk-11_recommender_systems/Untitled.ipynb
@@ -960,8 +960,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "id": "7dde1723-8b45-4a85-9b43-ce2c322b5eab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "97.0\n",
+      "50.0\n",
+      "43.285714285714285\n",
+      "151.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Average(lst):\n",
+    "    return sum(lst) / len(lst)\n",
+    "\n",
+    "dept_a = [1, 2, 4, 5]\n",
+    "dept_b = [96, 97, 98]\n",
+    "\n",
+    "a = Average(dept_a)\n",
+    "print(a)\n",
+    "c = Average(dept_b)\n",
+    "print(c)\n",
+    "print(Average([a, c]))\n",
+    "\n",
+    "store = [1, 2, 4, 5, 96, 97, 98]\n",
+    "print(Average(store))\n",
+    "\n",
+    "avg_per_dept = Average([sum(dept_a), sum(dept_b)])\n",
+    "print(avg_per_dept)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6e12bb0-07db-4481-9d93-ea9d6670c296",
    "metadata": {},
    "outputs": [],
    "source": []
