--- a/wk-6_data_pipelines/sqlalchemy_iss_example.ipynb
+++ b/wk-6_data_pipelines/sqlalchemy_iss_example.ipynb
@@ -256,11 +256,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'local_mysql_user' from 'api_keys' (/home/donal/WBS_coding_school_data_science_bootcamp/wk-6_data_pipelines/api_keys.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_673360/3548235245.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msqlalchemy\u001b[0m \u001b[0;31m# install if needed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mapi_keys\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlocal_mysql_user\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mapi_keys\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlocal_mysql_password\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocal_mysql_password\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'local_mysql_user' from 'api_keys' (/home/donal/WBS_coding_school_data_science_bootcamp/wk-6_data_pipelines/api_keys.py)"
+     ]
+    }
+   ],
    "source": [
-    "import sqlalchemy # install if needed"
+    "import sqlalchemy # install if needed\n",
+    "from api_keys import local_mysql_user\n",
+    "from api_keys import local_mysql_password\n",
+    "\n",
+    "print(local_mysql_password)"
    ]
   },
   {
@@ -274,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "database=\"iss_workshop\"\n",
     "host=\"127.0.0.1\"\n",
-    "user=\"donal\"\n",
-    "password=\"guest123\"\n",
+    "user=local_mysql_user\n",
+    "password=local_mysql_password\n",
     "port=3306\n",
     "con = f'mysql+pymysql://{user}:{password}@{host}:{port}/{database}'"
    ]
